[gd_scene load_steps=12 format=3 uid="uid://difu6uhxkg445"]

[ext_resource type="Texture2D" uid="uid://dasa53ydhxi4" path="res://assets/UI_UX/Free_UI_Button_Icons/Sprite_png/pause button.png" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://ckenmwugim2i2" path="res://scripts/menu_controle.gd" id="1_n2fgj"]
[ext_resource type="Texture2D" uid="uid://bu8jhynyosg76" path="res://assets/UI_UX/Free_Menu_Buttons/Sprite_Png/continue.png" id="2_6fi6k"]
[ext_resource type="Texture2D" uid="uid://pedv7i2nqvpw" path="res://assets/UI_UX/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoul9SlicesE-Sheet.png" id="2_lqwmk"]
[ext_resource type="Texture2D" uid="uid://bh40erpkp6f27" path="res://assets/UI_UX/tinyRPG_manaSoulGUI_v_1_0/20250420manaTabD-Sheet.png" id="3_3r4to"]
[ext_resource type="Texture2D" uid="uid://bo2dnfo5famhd" path="res://assets/UI_UX/Free_UI_Button_Icons/Sprite_png/undo button.png" id="3_047uy"]
[ext_resource type="Texture2D" uid="uid://d0h2vp1m8705p" path="res://assets/UI_UX/Free_Menu_Buttons/Sprite_Png/option.png" id="3_uo2fv"]
[ext_resource type="Texture2D" uid="uid://dl6cf103cq84i" path="res://assets/UI_UX/Free_UI_Button_Icons/Sprite_png/close button.png" id="4_047uy"]
[ext_resource type="Texture2D" uid="uid://cphah30h66t2w" path="res://assets/UI_UX/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoul9SlicesA-Sheet.png" id="4_xmer2"]
[ext_resource type="FontFile" uid="uid://bfqb0iyxyahdd" path="res://assets/font/kiwisoda/KiwiSoda.ttf" id="7_r8ery"]
[ext_resource type="AudioStream" uid="uid://dhqil5ik13306" path="res://assets/audio/click.wav" id="9_nlaqp"]

[node name="MenuControle" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n2fgj")

[node name="header" type="Sprite2D" parent="."]
position = Vector2(1029.75, 55.75)
scale = Vector2(0.494792, 0.494792)
texture = ExtResource("2_lqwmk")

[node name="header2" type="Sprite2D" parent="."]
position = Vector2(1088, 55.6249)
scale = Vector2(0.484372, 0.492186)
texture = ExtResource("2_lqwmk")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1067.5, 57.5)
scale = Vector2(2.34375, 2.46875)
texture = ExtResource("3_3r4to")
flip_h = true
hframes = 4
frame = 2

[node name="PauseButton" type="Button" parent="."]
offset_left = 1010.5
offset_top = 36.0
offset_right = 1050.5
offset_bottom = 76.0
focus_mode = 0
toggle_mode = true
icon = ExtResource("1_ahhtf")
flat = true

[node name="RestartButton" type="Button" parent="."]
offset_left = 1068.0
offset_top = 36.0
offset_right = 1108.0
offset_bottom = 76.0
focus_mode = 0
icon = ExtResource("3_047uy")
flat = true

[node name="PauseMenu" type="Panel" parent="."]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="fond" type="Sprite2D" parent="PauseMenu"]
position = Vector2(576, 320)
scale = Vector2(8.04167, 5.29167)
texture = ExtResource("4_xmer2")

[node name="OptionButton" type="Button" parent="PauseMenu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_left = 336.0
offset_top = 176.0
offset_right = 499.0
offset_bottom = 222.0
scale = Vector2(3, 3)
focus_mode = 0
icon = ExtResource("3_uo2fv")
flat = true

[node name="ContinueButton" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.511
anchor_top = 0.625
anchor_right = 0.511
anchor_bottom = 0.625
offset_left = -244.672
offset_top = -69.0
offset_right = -81.6721
offset_bottom = -23.0
scale = Vector2(3, 3)
focus_mode = 0
icon = ExtResource("2_6fi6k")
flat = true

[node name="InstructionsScreen" type="Panel" parent="PauseMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 1024.0
offset_bottom = 576.0

[node name="fond" type="Sprite2D" parent="PauseMenu/InstructionsScreen"]
position = Vector2(440, 256)
scale = Vector2(10.5, 5.5)
texture = ExtResource("4_xmer2")

[node name="CloseButton" type="Button" parent="PauseMenu/InstructionsScreen"]
layout_mode = 0
offset_left = 704.0
offset_top = 72.0
offset_right = 744.0
offset_bottom = 112.0
scale = Vector2(2.42, 2.42)
focus_mode = 0
icon = ExtResource("4_047uy")
flat = true

[node name="titre" type="Label" parent="PauseMenu/InstructionsScreen"]
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 304.0
offset_bottom = 159.0
theme_override_fonts/font = ExtResource("7_r8ery")
theme_override_font_sizes/font_size = 45
text = "Instructions :"

[node name="texte" type="Label" parent="PauseMenu/InstructionsScreen"]
layout_mode = 0
offset_left = 48.0
offset_top = 184.0
offset_right = 624.0
offset_bottom = 434.0
theme_override_fonts/font = ExtResource("7_r8ery")
theme_override_font_sizes/font_size = 20
text = "Déplacer : touches flèches ou W et D

Sauter : touche flèche haut ou A

Sauter sur les ennemies pour les éliminer

Éviter d'aller sur l'eau

Ramasser les clés pour déverouiller les portails

Enfin, collecter le cristal pour gagner au dernier niveau comme objectif"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_nlaqp")

[connection signal="toggled" from="PauseButton" to="." method="_on_pause_button_toggled"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="PauseMenu/ContinueButton" to="." method="continuer"]
[connection signal="pressed" from="PauseMenu/InstructionsScreen/CloseButton" to="." method="_on_close_instructions_button_pressed"]
